--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,10 @@
   <meta name="apple-mobile-web-app-title" content="phone_verification_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Permisos de cámara para web -->
+  <meta name="camera" content="yes">
+  <meta name="microphone" content="yes">
+  
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
